--- a/src/css/partners.css
+++ b/src/css/partners.css
@@ -3,6 +3,6 @@
   display: none;
 }
 
-.plugin-id-partners.docs-doc-id-index main {
+.plugin-id-partners main {
   padding-top: 0;
 }
